static files fixed

--- a/apps/portfolio_app/templates/portfolio_app/index.html
+++ b/apps/portfolio_app/templates/portfolio_app/index.html
@@ -8,13 +8,13 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="{% static 'css/portfolio_app/styles.css' %}">
-		<script src="{% static 'js/portfolio_app/parallax.js' %}"></script>
-		<script src="{% static 'js/portfolio_app/jquery.waypoints.min.js' %}"></script>
-		<script src="{% static 'js/portfolio_app/script.js' %}"></script>
+		<link rel="stylesheet" href="{% static 'portfolio_app/styles.css' %}">
+		<script src="{% static 'portfolio_app/parallax.js' %}"></script>
+		<script src="{% static 'portfolio_app/jquery.waypoints.min.js' %}"></script>
+		<script src="{% static 'portfolio_app/script.js' %}"></script>
 	</head>
 	<body>
-		<div class="parallax-window container-fluid" data-parallax="scroll" data-image-src="{% static 'res/portfolio_app/background.jpg' %}" data-speed="0.1">
+		<div class="parallax-window container-fluid" data-parallax="scroll" data-image-src="{% static 'portfolio_app/background.jpg' %}" data-speed="0.1">
 			<div class="header row col-xs-12">
 				<div class="col-lg-3 col-md-3 col-sm-4 hidden-xs">
 					<h2>Curtis Wang</h2>
@@ -32,7 +32,7 @@
 				<div id="about" class="section">
 					<h1>Hello!</h1>
 					<p>
-						My name is Curtis Wang and I am an undergrad studying at the University of Washington. Go Huskies! I plan to graduate with my Bachelors in Physics in June of 2017. I also am an experienced full stack developer. Through my education and hands on training at CodingBootcamp as well as my experience working as a front end web developer intern at PrettyBooks Seattle, I have developed a strong base in software development (Not to mention the Hack-a-thons I regularly take part in or the various Computer Science classes I take at UW). 
+						My name is Curtis Wang and I am an undergraduate studying at the University of Washington. Go Huskies! I plan to graduate with my Bachelors in Physics in June of 2017. I also am an experienced full stack developer. Through my education and hands on training at CodingBootcamp as well as my experience working as a front end web developer intern at PrettyBooks Seattle, I have developed a strong base in software development (Not to mention the Hack-a-thons I regularly take part in or the various Computer Science classes I take at UW). 
 					</p>
 					<p>
 						I am passionate about my work and I always strive to push myself to the best of my ability. I have a Creative mind and enjoy developing meaningful content. Friendly. Good communicator. Proactive.
